// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemList ItemList Snapshot matches the snapshot for folders 1`] = `
<div
  className="listContainer"
>
  <MyItem
    contextMenuOptions={
      Array [
        Object {
          "disabled": false,
          "label": "Info",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Copy*",
          "onClick": [Function],
        },
        Object {
          "disabled": undefined,
          "label": "Paste*",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Rename",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Manage Access",
          "onClick": [Function],
        },
        Object {
          "disabled": true,
          "label": "Share*",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Delete",
          "onClick": [Function],
        },
      ]
    }
    currentPath="https://example.com/"
    label="hehe"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  />
  <MyItem
    contextMenuOptions={
      Array [
        Object {
          "disabled": false,
          "label": "Info",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Copy*",
          "onClick": [Function],
        },
        Object {
          "disabled": undefined,
          "label": "Paste*",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Rename",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Manage Access",
          "onClick": [Function],
        },
        Object {
          "disabled": true,
          "label": "Share*",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Delete",
          "onClick": [Function],
        },
      ]
    }
    currentPath="https://example.com/"
    label="hihi"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  />
</div>
`;

exports[`ItemList ItemList Snapshot matches the snapshot for items 1`] = `
<div
  className="listContainer"
>
  <MyItem
    contextMenuOptions={
      Array [
        Object {
          "disabled": false,
          "label": "Info",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Copy*",
          "onClick": [Function],
        },
        Object {
          "disabled": undefined,
          "label": "Paste*",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Rename",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Manage Access",
          "onClick": [Function],
        },
        Object {
          "disabled": true,
          "label": "Share*",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Delete",
          "onClick": [Function],
        },
      ]
    }
    currentPath="https://example.com/"
    label="haha.jpg"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  />
</div>
`;

exports[`ItemList ItemList Snapshot matches the snapshot for selected folders 1`] = `
<div
  className="listContainer"
>
  <MyItem
    contextMenuOptions={
      Array [
        Object {
          "disabled": false,
          "label": "Info",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Copy*",
          "onClick": [Function],
        },
        Object {
          "disabled": undefined,
          "label": "Paste*",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Rename",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Manage Access",
          "onClick": [Function],
        },
        Object {
          "disabled": true,
          "label": "Share*",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Delete",
          "onClick": [Function],
        },
      ]
    }
    currentPath="https://example.com/"
    label="hehe"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  />
  <MyItem
    contextMenuOptions={
      Array [
        Object {
          "disabled": false,
          "label": "Info",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Copy*",
          "onClick": [Function],
        },
        Object {
          "disabled": undefined,
          "label": "Paste*",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Rename",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Manage Access",
          "onClick": [Function],
        },
        Object {
          "disabled": true,
          "label": "Share*",
          "onClick": [Function],
        },
        Object {
          "disabled": false,
          "label": "Delete",
          "onClick": [Function],
        },
      ]
    }
    currentPath="https://example.com/"
    label="hihi"
    onMouseDown={[Function]}
    onMouseUp={[Function]}
  />
</div>
`;
